# packages/database/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from './platform.js';
 export * from './tenancy.js';
+export * from './platform-services.js';
